New: added dynamic data to the templates

--- a/templates/template-overview.html
+++ b/templates/template-overview.html
@@ -13,7 +13,7 @@
       href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/ear-of-maize_1f33d.png"
     />
 
-    <title>NODE FARM</title>
+    <title>MOXHUS FARM</title>
 
     <style>
       *,
@@ -81,7 +81,7 @@
       }
 
       .card__emoji {
-        font-size: 5.5rem;
+        font-size: 4.5rem;
         line-height: 1.2;
         padding: 1.5rem 6rem 0.5rem 1.5rem;
         letter-spacing: -4rem;
@@ -137,7 +137,7 @@
 
       .card__detail--price {
         font-weight: 900;
-        font-size: 1.9rem;
+        font-size: 1.5rem;
       }
 
       .card__link:link,
@@ -189,7 +189,7 @@
 
   <body>
     <div class="container">
-      <h1>🌽 Node Farm 🥦</h1>
+      <h1>🌽 MOXHUS Farm 🥦</h1>
 
       <div class="cards-container">
         {%PRODUCT_CARDS%}
